--- a/srv/static/index.html
+++ b/srv/static/index.html
@@ -3,11 +3,12 @@
     <head>
     <meta charset="utf-8" />
     <title>Web Socket Demo</title>
+
     </head>
     <body style="font-family: Tahoma, Geneva, sans-serif">
     <!-- <button id="onboard">Loading...</button> <div id="chainlist" style="display: inline">Add a Theta network to your MetaMask with <a href="https://chainlist.org/?search=theta" target="chainlist">ChainList</a></div><br /> -->
     <!-- <textarea rows="1" cols="80" id="nick"></textarea> -->
-    Nickname: <input type="text" id="nick" size="12" style="font-family: monospace" onInput="showCurrentValue(event)" /> Address: <input type="text" id="addr" size="42" style="font-family: monospace" />
+    Nickname: <input type="text" id="nick" size="4" style="font-family: monospace" onInput="showCurrentValue(event)" /> Address: <input type="text" id="addr" size="42" style="font-family: monospace" />
     <!-- <input cols="80" id="nick"></input> -->
     <form id="chatform">
         <textarea rows="1" cols="80" id="message"></textarea>
@@ -18,6 +19,7 @@
         <br />
     </form>
 
+    <p id="invoice">No Invoice Received Yet!</p>
 
     <p id="demo"></p>
 
@@ -26,14 +28,28 @@
     <button id="disconnect" onclick="disconnect()">Disconnect</button>
     <button id="reconnect" onclick="reconnect()" style="visibility: hidden">Connect</button>
 
+    <button id="test01" onclick="testLN01()">Test 01</button>
+    <button id="test02" onclick="testLN02()">Test 02 : GetInfo</button>
+    <button id="test03" onclick="testLN03()">Test 03 : MakeInvoice</button>
+    <button id="test03" onclick="testLN04()">Test 04 : SendPayment</button>
+
     <ul id="chat"></ul>
 
     <script src="main.js"></script>
     <script src="common.js"></script>
+    <script
+      src="webln_0.2.0.min.js"
+      integrity="sha384-mTReBqbhPO7ljQeIoFaD1NYS2KiYMwFJhUNpdwLj+VIuhhjvHQlZ1XpwzAvd93nQ"
+      crossorigin="anonymous"
+    ></script>
+
+    <script src="webln_handlers.js"></script>
 
     <!-- <script src="metamask-onboarding.bundle.js"></script> -->
     <!-- <script src="metamask-onboarding.js"></script> -->
     <!-- <script>updateButton();</script> -->
+
+    <ul id="webln">Nothing Yet!</ul>
 
     </body>
 </html>
