--- a/srv/static/index.html
+++ b/srv/static/index.html
@@ -15,11 +15,11 @@
         <br />
         <button type="submit">Send</button>
         <br />
-        <textarea rows="5" cols="80" id="logger"></textarea>
+        <textarea rows="7" cols="80" id="logger"></textarea>
+        <br />
+        <textarea rows="5" cols="80" id="invoice">No Invoice Yet!</textarea>
         <br />
     </form>
-
-    <p id="invoice">No Invoice Received Yet!</p>
 
     <p id="demo"></p>
 
@@ -31,7 +31,9 @@
     <button id="test01" onclick="testLN01()">Test 01</button>
     <button id="test02" onclick="testLN02()">Test 02 : GetInfo</button>
     <button id="test03" onclick="testLN03()">Test 03 : MakeInvoice</button>
-    <button id="test03" onclick="testLN04()">Test 04 : SendPayment</button>
+    <button id="test04" onclick="testLN04()">Test 04 : SendPayment</button>
+    <button id="test05" onclick="testLN05()">Test 05 : SignMessage</button>
+    <button id="test06" onclick="testLN06()">Test 06 : VerifyMessage</button>
 
     <ul id="chat"></ul>
 
